Initial support for allowing input from CRAM files, lightly tested.
Implements a SequencesReaderReferenceSource for supplying sequence data
to the htsjdk CRAM reading routines, and the plumbing needed to feed
that to the SamReader.

--- a/build.xml
+++ b/build.xml
@@ -45,6 +45,7 @@
     <include name="velocity-tools-generic.jar" />
     <include name="commons-collections-3.2.1.jar" />
     <include name="commons-lang-2.4.jar" />
+    <include name="commons-compress-1.4.1.jar" />
   </fileset>
 
   <path id="tools.runtime.classpath">
@@ -84,6 +85,7 @@
     <zipfileset src="${tools.src.lib.dir}/velocity-tools-generic.jar" excludes="META-INF/**" />
     <zipfileset src="${tools.src.lib.dir}/commons-collections-3.2.1.jar" excludes="META-INF/**" />
     <zipfileset src="${tools.src.lib.dir}/commons-lang-2.4.jar" excludes="META-INF/**" />
+    <zipfileset src="${tools.src.lib.dir}/commons-compress-1.4.1.jar" excludes="META-INF/**" />
 
     <zipfileset src="${tools.src.lib.dir}/RPlot.jar" excludes="META-INF/**"/>
     <zipfileset src="${tools.src.lib.dir}/gzipfix.jar">
