--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,7 @@
   </taskdef>
 
   <property name="product" value="RTG Tools" />
-  <property name="product.version" value="3.4.5-dev" />
+  <property name="product.version" value="3.5" />
   <property name="resources" value="tools" />
   <property name="main.class" value="com.rtg.ToolsEntry" />
 
