Add error message for bad blacklist use

--- a/src/com/rtg/util/diagnostic/Diagnostics.properties
+++ b/src/com/rtg/util/diagnostic/Diagnostics.properties
@@ -148,6 +148,8 @@ INVALID_QUALITY = Quality data was invalid. You may need to try a different form
 
 INVALID_MASK_PARAMS = The combination of w, a, b, and c is not valid for this data set. Please consult the user manual.
 
+BLACKLIST_LONG_READ_ONLY = The use of a blacklist is not supported for this read set.
+
 # Default mappings for warning conditions
 
 BAD_TIDE = Unexpected symbol "%2" in sequence "%1" replaced with "%3".
