--- a/build.xml
+++ b/build.xml
@@ -106,6 +106,7 @@
     </fileset>
     <zipfileset src="${tools.test.lib.dir}/spelling.jar"/>
     <zipfileset src="${tools.test.lib.dir}/junit.jar" excludes="META-INF/**"/>
+    <zipfileset src="${tools.test.lib.dir}/hamcrest-core-1.3.jar" excludes="META-INF/**"/>
   </union>
 
 
