Tool to produce reference manifest. And tool to get list of them.

--- a/build.xml
+++ b/build.xml
@@ -69,6 +69,7 @@
     <fileset dir="${build.src}" />
     <fileset dir="${tools.src.dir}">
       <include name="com/**/*.properties"/>
+      <include name="com/rtg/reference/resources/**/*"/>
       <include name="com/rtg/report/resources/*"/>
       <include name="com/rtg/vcf/resources/*"/>
       <include name="com/rtg/mode/BLOSUM45" />
