Set default Locale on startup to Locale.US.
This is to avoid VCF problems in locales that use ',' as the decimal
separator. Ensure that a couple of other code points don't use static
references to the original default Locale.

--- a/build.xml
+++ b/build.xml
@@ -450,6 +450,8 @@
       <arg line="${test.class}" />
       <jvmarg value="-server" />
       <jvmarg value="-ea" />
+      <jvmarg value="-Duser.language=US" />
+      <jvmarg value="-Duser.country=US" />
       <jvmarg value="-Djava.awt.headless=true" />
       <jvmarg value="-Drtg.developer=true" />
       <jvmarg value="-Djunit.printFailures=true" />
