--- a/test/com/rtg/relation/resources/dot.properties
+++ b/test/com/rtg/relation/resources/dot.properties
@@ -2,6 +2,7 @@
 font=Helvetica
 invisible.node=[shape=point,style=filled,fillcolor="/greys9/8",label="",height=.001,width=.001]
 color=/greys9/8
+bgcolor=transparent
 male.fill=/rdylbu11/7:/rdylbu11/8
 female.fill=/rdpu9/2:/rdpu9/4
 unknown.fill=/greens9/2:/greens9/4
