Update htsjdk to 2.18.2 ; sdfsubseq adjust output sequence names
The new version is stricter on the sequence names allowed in reference
sequences, disallowing several brackets etc. rtg sdfsubseq output when
using --fasta or --fastq has been updated to use a different naming
convention for it's output sequences to be compatible with the new
constraints.

--- a/build.xml
+++ b/build.xml
@@ -36,7 +36,8 @@
 
   <property name="regression.update" value=""/> <!-- Empty means don't update nano-regression results -->
 
-  <property name="htsjdk.jar" value="sam-2.14.3.jar"/> <!-- This must currently be built from the RTG fork of htsjdk -->
+  <!-- This must currently be built from the RTG fork of htsjdk -->
+  <property name="htsjdk.jar" value="sam-rtg-2.18.2.jar"/>
 
 
   <!-- Define resource collections for compilation, running, etc -->
