--- a/build.xml
+++ b/build.xml
@@ -29,7 +29,7 @@
   </taskdef>
 
   <property name="product" value="RTG Tools" />
-  <property name="product.version" value="3.11-dev" />
+  <property name="product.version" value="3.12" />
   <property name="product.repo" value="RealTimeGenomics/rtg-tools" />
   <property name="resources" value="tools" />
   <property name="main.class" value="com.rtg.RtgTools" />
